--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
 body {
+  background-color: #a79999;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eceef1;
 }
 
 code {
