--- a/src/styles/ForecastSummaries.css
+++ b/src/styles/ForecastSummaries.css
@@ -1,4 +1,5 @@
 .forecast-summaries {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin: 30px 10px;
 };
