--- a/src/styles/ForecastDetails.css
+++ b/src/styles/ForecastDetails.css
@@ -1,5 +1,5 @@
 .forecast-details {
-    border-radius: 100px;
+    border-radius: 85px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,6 +8,7 @@
     background-color: rgb(255, 255, 255, 0.8);
     width: 100;
     text-align: center;
+    opacity: 0.73;
 }
 
 .forecast-details__date {
